# luojia-math-tutor-skill

./: .gitattributes  .gitignore  CRAIC_AGENT_TRACK_EXTENSION.md  LICENSE  MVP0_INIT_GUIDE.md  PHASE2_PHASE3_BRIDGE.md  PHASE3_STEM_AGENT_PLATFORM.md  PLAN.md  Project_Story.md  README.md  TECH_STACK_EXPLANATION.md  WEB_APP_IMPLEMENTATION_PATH.md  bili_test.json  build_video_db.py  concept_proposal.md  faculty-presentation.html  implementation_plan.md  implementation_plan1.md  luojia-math-tutor.skill  package.json  test.txt  update_video_db.py  update_video_db_subsection.py
apps/api/: .env.example  pyproject.toml  requirements.txt  test_mineru.py
apps/api/app/: config.py  main.py  main_deps.py
apps/api/app/agents/: code_executor.py  cron_agent.py  harness_evaluator.py  multimodal.py  vision_agent.py
apps/api/app/api/: routes_cron.py  routes_exercises.py  routes_mastery.py  routes_mistakes.py  routes_models.py  routes_notes.py  routes_resources.py  routes_sessions.py  routes_tutor.py  routes_uploads.py  routes_viz.py
apps/api/app/knowledge/: concepts.py  loader.py  schema.py  search.py  vector_store.py
apps/api/data/: fallback_videos.json
apps/api/scripts/: evaluate_benchmark.py  summarize_eval.py
apps/api/tests/: conftest.py  test_agent_graph.py  test_api_routes.py  test_embeddings.py  test_fast_context.py  test_fast_path.py  test_hint_policy.py  test_knowledge_search.py  test_mastery.py  test_message_thinking_metadata.py  test_notes.py  test_orchestrator.py  test_step_checker.py  test_vector_store.py  test_verifier.py  test_visualizer.py
data/: debug.jsonl  (+14 more)
(+104 files in other folders)
