[project]
name = "luojia-math-tutor-api"
version = "0.1.0"
description = "FastAPI backend for Luojia Math Tutor MVP"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "sympy",
  "httpx",
  "pytest",
  "matplotlib>=3.10.9",
  "python-multipart>=0.0.32",
  "langgraph>=1.2.4",
  "langchain-core>=1.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

